@@ -10,23 +10,31 @@ import de.fu_berlin.inf.gmanda.gui.actions.FetchGmaneListToFileAction;
 import de.fu_berlin.inf.gmanda.gui.actions.ReindexWithLuceneAction;
 import de.fu_berlin.inf.gmanda.gui.actions.SearchWithLuceneAction;
 import de.fu_berlin.inf.gmanda.gui.actions.SetCacheLocationAction;
+import de.fu_berlin.inf.gmanda.gui.actions.SplitTrailAction;
 
 public class ToolsMenu extends JMenu {
 
 	public ToolsMenu(FetchGmaneListToFileAction fetchAction,
 		SetCacheLocationAction setPDLocationAction, CreateDSVFileAction createDSVAction,
 		SearchWithLuceneAction searchLucene, ReindexWithLuceneAction reindexLucene,
-		BasicStatisticalReportAction stats, ExecuteTrailAction executeTrail) {
+		BasicStatisticalReportAction stats, ExecuteTrailAction executeTrail,
+		SplitTrailAction splitTrail) {
+
 		super("Tools");
 		add(fetchAction);
 		add(setPDLocationAction);
 		add(createDSVAction);
+		
 		add(new JSeparator());
+		
 		add(searchLucene);
 		add(reindexLucene);
+		
 		add(new JSeparator());
+		
 		add(stats);
 		add(executeTrail);
+		add(splitTrail);
 	}
 
 }
